WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23133
Fix svg disabled build.
https://bugs.webkit.org/show_bug.cgi?id=23133
Summary
Fix svg disabled build.
alan
Reported
2009-01-06 01:52:10 PST
Move 'pointer-events' from SVGCSSPropertyNames.in to CSSPropertyNames.in In
https://bugs.webkit.org/show_bug.cgi?id=11395
, 'pointer-events' property was moved out of the SVG CSS and added to the general CSS. *PropertyNames.in files need to reflect this change.
Attachments
move 'pointer-events' property
(1.30 KB, patch)
2009-01-06 01:56 PST
,
alan
no flags
Details
Formatted Diff
Diff
original + linker fix
(5.78 KB, patch)
2009-01-06 04:55 PST
,
alan
ddkilzer
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2009-01-06 01:56:29 PST
Created
attachment 26455
[details]
move 'pointer-events' property
alan
Comment 2
2009-01-06 04:55:58 PST
Created
attachment 26457
[details]
original + linker fix
David Kilzer (:ddkilzer)
Comment 3
2009-01-06 06:31:07 PST
Comment on
attachment 26457
[details]
original + linker fix r=me Thanks! I'll land this now.
David Kilzer (:ddkilzer)
Comment 4
2009-01-06 06:39:56 PST
$ git svn dcommit Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/css/CSSPrimitiveValueMappings.h Committed
r39650
http://trac.webkit.org/changeset/39650
See also:
http://trac.webkit.org/changeset/39648
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug