2009-01-06  Zalan Bujtas  <zbujtas@gmail.com>

Reviewed by David Kilzer.

        https://bugs.webkit.org/show_bug.cgi?id=23133
        Fix SVG disabled build. Move 'pointer-events' from SVGCSSPropertyNames.in to
        CSSPropertyNames.in and move PointerEvents functions out of #if ENABLE(SVG)

        NOTE: Property name fixes landed as part of r39648.

        * css/CSSPrimitiveValueMappings.h:
        (WebCore::CSSPrimitiveValue::CSSPrimitiveValue):
        (WebCore::CSSPrimitiveValue::operator EPointerEvents):
        * css/CSSPropertyNames.in:
        * css/SVGCSSPropertyNames.in:

Canonical link: https://commits.webkit.org/31849@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39650 268f45cc-cd09-0410-ab3c-d52691b4dbfc